Fix screen text being cut off on small screen

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -116,6 +116,10 @@ main {
 	.container {
 		padding: 2em 0.5em;
 	}
+
+	.screen {
+		border-radius: 1em;
+	}
 }
 
 .key-off {
